# python-project-template

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Readme.md  change_gpu_config.py  devcontainer.json
.devcontainer/scripts/: change_image_name.sh  create_python_env.sh  post_create.sh  post_start.sh
notebooks/: pytorch.ipynb  tensorflow.ipynb
