[project]
name = "python-project-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "black>=25.1.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "pandas>=2.2.3",
    "pylint>=3.3.7",
]

[project.optional-dependencies]
pt-cpu = [
  "torch==2.7.0",
  "torchvision==0.22.0",
  "torchaudio==2.7.0",
]
pt-gpu = [
  "torch==2.7.0",
  "torchvision==0.22.0",
  "torchaudio==2.7.0",
]
tf-cpu = [
  "tensorflow==2.19.0"
]
tf-gpu = [
  "tensorflow[and-cuda]==2.19.0"
]

[tool.uv]
conflicts = [
  [
    { extra = "pt-cpu" },
    { extra = "pt-gpu" },
    { extra = "tf-cpu" },
    { extra = "tf-gpu" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "pt-cpu" },
  { index = "pytorch-gpu", extra = "pt-gpu" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "pt-cpu" },
  { index = "pytorch-gpu", extra = "pt-gpu" },
]
torchaudio = [
  { index = "pytorch-cpu", extra = "pt-cpu" },
  { index = "pytorch-gpu", extra = "pt-gpu" },
]


[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
